tests/NormalTests/paczka1/small_fuzzy/19533358.err
Error in line 1: WKQvsFQ S340 3,0
Error in line 2: T2EBin S640 60,2
